Deploy with aboutus page change

--- a/kalyan/templates/kalyan/HE/public/about.html
+++ b/kalyan/templates/kalyan/HE/public/about.html
@@ -24,11 +24,20 @@
   We as a team and as a citizen of this Great country really want to serve the people of this country.
   Our main aim is to make this country a better place and a global leader.
   </p>
+  <p>
+      Team Members:
+      <ul>
+          <li>Shivam Pandey</li>
+          <li>Upendra Upadhyay</li>
+          <li>Charchit Sharma</li>
+          <li>Manoj Jeswani</li>
+      </ul>
+  </p>
   </h3>
 	</p>
 	</div>
 </div>
 </div>
 
-     
+
 {% endblock %}
