--- a/kalyan/static/kalyan/css/stylesa.css
+++ b/kalyan/static/kalyan/css/stylesa.css
@@ -14,11 +14,11 @@
     margin-top: 15px;
 }
 
-#top .nav
-{
+/*#top .nav*/
+/*{*/
     /* center navigation pills */
-    display: inline-block;
-}
+/*    display: inline-block;*/
+/*}*/
 
 #middle .form-control
 {
