--- a/kalyan/static/kalyan/css/stylesa.css
+++ b/kalyan/static/kalyan/css/stylesa.css
@@ -1,3 +1,7 @@
+body {
+	margin-top: 4rem;
+}
+
 
 .container
 {
@@ -7,12 +11,12 @@
     text-align: center;
 }
 
-#top
-{
+/*#top*/
+/*{*/
     /* surround with whitespace */
-    margin-bottom: 15px;
-    margin-top: 15px;
-}
+/*    margin-bottom: 15px;*/
+/*    margin-top: 15px;*/
+/*}*/
 
 /*#top .nav*/
 /*{*/
