--- a/kalyan/static/kalyan/css/stylesa.css
+++ b/kalyan/static/kalyan/css/stylesa.css
@@ -11,18 +11,18 @@ body {
     text-align: center;
 }
 
-/*#top*/
-/*{*/
-    /* surround with whitespace */
-/*    margin-bottom: 15px;*/
-/*    margin-top: 15px;*/
-/*}*/
+#top
+{
+     /*surround with whitespace*/
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
 
-/*#top .nav*/
-/*{*/
-    /* center navigation pills */
-/*    display: inline-block;*/
-/*}*/
+#top .nav
+{
+     /*center navigation pills*/
+    display: inline-block;
+}
 
 #middle .form-control
 {
