--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
 
 
 
-                    <nav id="nav" class="navbar navbar-light" style="background-color: #D3D3D3;" navbar-expand-sm fixed-top">
+                    <nav id="nav" class="top navbar navbar-light navbar-expand-sm fixed-top" style="background-color: #D3D3D3;" >
                         <a class="navbar-brand" href="/">Kalyan Yojana</a>
 	 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
