--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                 background:rgba(255,255,255,0.8); /* applies a 50% transparent white background */
             }
     </style>
-    <body style="font-family: Font; padding-top: 40px; padding-bottom: 40px;" background="{% static 'kalyan/img/bg.jpg' %}" style="background-repeat: no-repeat; background-attachment: fixed; background-position: center;">
+    <body style="font-family: Font;" background="{% static 'kalyan/img/bg.jpg' %}" style="background-repeat: no-repeat; background-attachment: fixed; background-position: center;">
      <!-- navbar-fixed-top -->
 
 
